Resize images for individual recipes. Correct HTML error where closing div not added. Reduced number of posts visible on home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -211,6 +211,13 @@ body {
     }
 }
 
+/* --- Recipe Cards  --- */
+
+.recipe-img > img {
+    max-height: 450px;
+    width: 450px;
+}
+
 
 footer {
     margin-top: auto;
